// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PaginationIcons on Web Next page icon renders out an svg and label 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "flexDirection": "row",
      "padding": 12,
    }
  }
  testID="pagination-button-next"
>
  <Text
    style={
      Object {
        "color": "#006699",
        "fontFamily": "GillSansMTStd-Medium",
        "fontSize": 15,
        "height": 15,
        "marginRight": "10px",
        "textAlign": "right",
      }
    }
  >
    <PageLabel
      direction="Next"
    />
  </Text>
  <Svg
    height={12}
    width={7}
  >
    <G
      fill="#006699"
    >
      <Path />
    </G>
  </Svg>
</View>
`;

exports[`PaginationIcons on Web Previous page icon renders out an svg and label 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "flexDirection": "row",
      "padding": 12,
    }
  }
  testID="pagination-button-previous"
>
  <Svg
    height={12}
    width={7}
  >
    <G
      fill="#006699"
    >
      <Path />
    </G>
  </Svg>
  <Text
    style={
      Object {
        "color": "#006699",
        "fontFamily": "GillSansMTStd-Medium",
        "fontSize": 15,
        "height": 15,
        "marginLeft": "10px",
        "textAlign": "left",
      }
    }
  >
    <PageLabel
      direction="Previous"
    />
  </Text>
</View>
`;
